# calculator

./: .gitignore  CMakeLists.txt  LICENSE  README.md  TEST_ENHANCEMENT_SUMMARY.md  calculator.hpp  mkdocs.yml
.github/workflows/: ci-linux-macos.yml  ci-windows-msvc.yml  codeql.yml  windows-mingw.yml
benchmark/: main.cpp
docs/: changelog.md  index.md
docs/api-reference/: exceptions.md  expression-parser.md  functions.md  index.md
docs/development/: benchmarking.md  building-from-source.md  contributing.md  index.md  testing.md
docs/examples/: advanced-examples.md  basic-examples.md  index.md  real-world-usage.md
docs/getting-started/: building.md  index.md  installation.md  quick-start.md
docs/reference/: index.md  limitations.md  numeric-types.md  operators.md
docs/user-guide/: advanced-features.md  basic-usage.md  error-handling.md  index.md  variables-functions.md
example/: README.md  advanced_usage.cpp  error_handling_demo.cpp  example_utils.hpp  main.cpp  numeric_types_demo.cpp
test/: main.cpp
